fix: whitespace in state

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,10 @@ a:hover {
     overflow: hidden;
 }
 
+#countdown [id$="-container"]>* {
+    display: inline;
+}
+
 .spacer {
     color: var(--bg-150);
 }
